[package]
name = "ethstore_lib"
version = "0.1.0"
authors = ["tom_glb <gooMorning_glb@wust.csn.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1.0"
env_logger = "0.5"
num_cpus = "1.6"
rustc-hex = "2.1.0"
serde = "1.0"
serde_derive = "1.0"
parking_lot = "0.10.0"
parity-crypto = { version = "0.6.1", features = ["publickey"] }

panic_hook = { path = "./util/panic-hook" }
ethstore = { path = "./accounts/ethstore" }
ethkey = { path = "./accounts/ethkey" }
dir = { path = './util/dir' }